--- a/Back/package.json
+++ b/Back/package.json
@@ -19,7 +19,9 @@
     "axios": "^1.2.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "morgan": "^1.10.0",
