--- a/Back/package.json
+++ b/Back/package.json
@@ -26,7 +26,10 @@
     "jspdf": "^2.5.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
+    "pdfkit": "^0.13.0",
+    "pdfkit-table": "^0.1.99",
     "pg": "^8.9.0",
+    "puppeteer": "^19.7.2",
     "sweetalert2": "^11.4.8"
   },
   "devDependencies": {
